# scryer

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-COMMERCIAL  NOTICE  README.md  esbuild.mjs  eslint.config.ts  jest.casc.config.mjs  jest.config.mjs  jest.net.config.mjs  package.json  playwright.config.ts  playwright.e2e-casc.config.ts  playwright.e2e.config.ts  playwright.toc-casc.config.ts  playwright.toc.config.ts  playwright.xml-casc.config.ts  playwright.xml.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  scryer.code-workspace  tsconfig.build.json  tsconfig.dev.json  tsconfig.json  tsconfig.playwright.json  tsconfig.src.json  tsconfig.test.json  vitest.casc.config.ts  vitest.net.config.ts  vitest.unit.config.ts
.claude/: CLAUDE.md  settings.json
scryer-asset-server/crates/casc-lib/: Cargo.toml  README.md
scryer-asset-server/crates/casc-lib/src/: error.rs  lib.rs
scryer-asset-server/crates/casc-lib/src/blte/: compression.rs  decoder.rs  encryption.rs  mod.rs
scryer-asset-server/crates/casc-lib/src/cache/: mod.rs
scryer-asset-server/crates/casc-lib/src/cdn/: archive_index.rs  client.rs  mod.rs
scryer-asset-server/crates/casc-lib/src/config/: build_config.rs  build_info.rs  cdn_config.rs  mod.rs
scryer-asset-server/crates/casc-lib/src/encoding/: mod.rs  parser.rs
scryer-asset-server/crates/casc-lib/src/extract/: metadata.rs  mod.rs  pipeline.rs
scryer-asset-server/crates/casc-lib/src/listfile/: downloader.rs  mod.rs  parser.rs
scryer-asset-server/crates/casc-lib/tests/: integration.rs  synthetic_casc.rs
scryer-asset-server/crates/scryer-asset-server/: Cargo.toml
scryer-asset-server/crates/scryer-asset-server/src/: blp_decode.rs  listfile_index.rs  main.rs  server.rs
(+754 files in other folders)
