[package]
name = "casc-lib"
version = "0.2.0"
edition = "2024"
description = "Pure Rust library for reading World of Warcraft CASC archives"
license = "MIT"
authors = ["Xerrion"]
repository = "https://github.com/Xerrion/casc-extractor"
homepage = "https://github.com/Xerrion/casc-extractor"
readme = "README.md"
keywords = ["casc", "wow", "blizzard", "game", "archive"]
categories = ["parser-implementations", "game-development"]

[dependencies]
csv = "1.4.0"
flate2 = "1.1.9"
glob = "0.3.3"
hex = "0.4.3"
lz4_flex = "0.13"
md-5 = "0.10.6"
memmap2 = "0.9.10"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
salsa20 = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
