[package]
name = "scryer-asset-server"
version = "0.2.0"
edition = "2024"
description = "Server for extracting files from World of Warcraft CASC archives"
license = "MIT"
authors = ["Xerrion"]
repository = "https://github.com/Xerrion/casc-extractor"
homepage = "https://github.com/Xerrion/casc-extractor"
readme = "../../README.md"
keywords = ["casc", "wow", "blizzard", "cli", "extractor"]
categories = ["command-line-utilities", "game-development"]

[[bin]]
name = "scryer-asset-server"
path = "src/main.rs"

[dependencies]
casc-lib = { path = "../casc-lib", version = "0.2.0" }
clap = { version = "4.6", features = ["derive"] }
indicatif = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
